dc_mysql.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: mysql
    service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    app: mysql
    service: mysql
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
        service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_USER
          value: unifiedpush
        - name: MYSQL_PASSWORD
          value: B0MzFTcKovFLSiOods0Y
        - name: MYSQL_ROOT_PASSWORD
          value: oGz82pzUvx7MbIAdvO86
        - name: MYSQL_DATABASE
          value: unifiedpush
        image: docker.io/openshift/mysql-55-centos7
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3306
          timeoutSeconds: 1
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE
              -e 'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 150Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql/data
          name: mysql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql
  test: false
  triggers:
  - type: ConfigChange
