dc_ups.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: ups
    mobile: enabled
    name: ups
    service: ups
  name: ups
spec:
  replicas: 1
  selector:
    app: ups
    service: ups
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ups
        service: ups
    spec:
      containers:
      - args:
        - --provider=github
        - --upstream=http://localhost:8080
        - --http-address=0.0.0.0:4180
        - --redirect-url=<route>/oauth2/callback
        - --https-address=
        - --cookie-secret=SECRET
        - --github-org=aerogear
        - --client-id=<clientid>
        - --client-secret=<clientsecret>
        - --email-domain=*
        - --skip-auth-regex=/rest/sender,/rest/registry/device,/rest/prometheus/metrics
        image: docker.io/a5huynh/oauth2_proxy:2.2
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 4180
          name: public
          protocol: TCP
        resources:
          limits:
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: MYSQL_USER
          value: unifiedpush
        - name: MYSQL_PASSWORD
          value: B0MzFTcKovFLSiOods0Y
        - name: MYSQL_DATABASE
          value: unifiedpush
        image: ' docker.io/aerogear/unifiedpush-wildfly:1.3.0-no-auth.Final'
        imagePullPolicy: IfNotPresent
        name: ups
        ports:
        - containerPort: 8080
          name: ups
          protocol: TCP
        resources:
          limits:
            memory: 750Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
