svc_mysql.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    service: mysql
  name: mysql
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
    service: mysql
  sessionAffinity: None
  type: ClusterIP
