route_ups.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ups
    service: ups
  name: ups
spec:
  port:
    targetPort: web
  tls:
    termination: edge
  to:
    kind: Service
    name: ups-proxy
    weight: 100
  wildcardPolicy: None
